fix: add correct link to project feat: add id for sections

--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
           href="https://www.udemy.com/course/pro-react-redux/">React + Redux</a></li>
       </ul>
     </section>
-    <section>
+    <section id="projects">
       <h3 class="title">Projects</h3>
       <div>
 
       </div>
       <p>React mini-shop(July 2021) <a href="https://stoic-feynman-e0be24.netlify.app/" class="nav__link">React
         mini-shop</a></p>
-      <p>Practice create chat (React,TS,GQL,Apollo)(September 2021) <a href="https://github.com/AlexandrKirichenko/StarDBapp" class="nav__link">StarDB</a>
+      <p>Practice create chat (React,TS,GQL,Apollo)(September 2021) <a href="https://github.com/AlexandrKirichenko/Chat-TS" class="nav__link">Chat-TS(Apollo)</a>
       </p>
     </section>
     <section>
@@ -100,8 +100,8 @@
           export default useOutsideClick;
         </code></pre>
     </section>
-    <section>
-      <h3 class="title">Experience</h3>
+    <section id="experience">
+      <h3  class="title">Experience</h3>
       <div>
         <p>NewTone (August 2021 - October 2021)  - Junior frontend developer.</p>
       </div>
@@ -110,7 +110,7 @@
       <h3 class="title">Languages</h3>
       <p>Russian - Native</p>
       <p>Ukrainian - Native</p>
-      <p>English - Pre-intermediate</p>
+      <p>English - Intermediate</p>
     </section>
 
   </main>
