fix: change h1 in section about

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <main class="page">
     <section id="about" class="about">
       <img src="https://avatars.githubusercontent.com/u/52669128" alt="Profile photo" class="about__avatar ibg">
-      <h1>Hello! My name is Alexandr and i am junior full stack web developer.</h1>
+      <h1>Hello! My name is Alexandr and i am junior frontend developer.</h1>
       <p>Prolific, frontend developer with a passion for coding! Passionate about building web applications.</p>
       <p class="about__contacts">
         <a href="https://www.linkedin.com/in/alexanderkirichenko/">Linkedin</a> /
