fix: change meta info

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>CV Alexandr Kirichenko</title>
   <link rel="stylesheet" href="style.css">
@@ -48,7 +48,7 @@
         <li>HTML</li>
         <li>CSS,SASS</li>
         <li>JS,Typescript</li>
-        <li>React.js, Redux, </li>
+        <li>React.js, Redux,</li>
         <li>Jest</li>
         <li>GraphQL,Apollo</li>
       </ul>
@@ -70,7 +70,8 @@
       </div>
       <p>React mini-shop(July 2021) <a href="https://stoic-feynman-e0be24.netlify.app/" class="nav__link">React
         mini-shop</a></p>
-      <p>Practice create chat (React,TS,GQL,Apollo)(September 2021) <a href="https://github.com/AlexandrKirichenko/Chat-TS" class="nav__link">Chat-TS(Apollo)</a>
+      <p>Practice create chat (React,TS,GQL,Apollo)(September 2021) <a
+        href="https://github.com/AlexandrKirichenko/Chat-TS" class="nav__link">Chat-TS(Apollo)</a>
       </p>
     </section>
     <section>
@@ -96,9 +97,9 @@
         </code></pre>
     </section>
     <section id="experience">
-      <h3  class="title">Experience</h3>
+      <h3 class="title">Experience</h3>
       <div>
-        <p>NewTone (August 2021 - October 2021)  - Junior frontend developer.</p>
+        <p>NewTone (August 2021 - October 2021) - Junior frontend developer.</p>
       </div>
     </section>
     <section>
